--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
+    "heroku-postbuild": "ng build --prod",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -21,7 +22,10 @@
     "@angular/router": "~11.0.5",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.10.2",
+    "typescript": "~4.0.2",
+    "@angular/cli": "~11.0.5",
+    "@angular/compiler-cli": "~11.0.5"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1100.5",
@@ -41,5 +45,10 @@
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~4.0.2"
+  },
+  "engines":{
+    "node": "14.17.2",
+    "npm": "6.14.13"
+
   }
 }
