--- a/package.json
+++ b/package.json
@@ -13,19 +13,21 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.0.5",
+    "@angular/cli": "~11.0.5",
     "@angular/common": "~11.0.5",
     "@angular/compiler": "~11.0.5",
+    "@angular/compiler-cli": "~11.0.5",
     "@angular/core": "~11.0.5",
     "@angular/forms": "~11.0.5",
     "@angular/platform-browser": "~11.0.5",
     "@angular/platform-browser-dynamic": "~11.0.5",
     "@angular/router": "~11.0.5",
+    "express": "^4.17.1",
+    "path": "^0.12.7",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.2",
     "typescript": "~4.0.2",
-    "@angular/cli": "~11.0.5",
-    "@angular/compiler-cli": "~11.0.5"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1100.5",
@@ -46,9 +48,8 @@
     "tslint": "~6.1.0",
     "typescript": "~4.0.2"
   },
-  "engines":{
+  "engines": {
     "node": "14.17.2",
     "npm": "6.14.13"
-
   }
 }
